# jerky

./: .gitignore  AGENTS.md  CHANGELOG.md  CODEOWNERS  Cargo.toml  INVENTORY.md  README.md
.github/workflows/: preflight.yml
bench/: Cargo.toml  README.md
bench/benches/: timing_bitvec_rank.rs  timing_bitvec_select.rs  timing_chrseq_access.rs  timing_intvec_access.rs
bench/src/: mem_bitvec.rs  mem_chrseq.rs  mem_intvec.rs  merge_vs_rebuild.rs
examples/: bit_vector.rs  compact_vector.rs  dacs_byte.rs  gpu_bench.rs  wavelet_matrix.rs
scripts/: preflight.sh
src/: bit_vectors.rs  broadword.rs  builder.rs  data.rs  error.rs  gpu.rs  int_vectors.rs  lib.rs  mii_sequences.rs  serialization.rs  utils.rs
src/bit_vector/: bit_vector.rs  mod.rs  prelude.rs
src/bit_vector/rank9sel/: inner.rs  mod.rs
src/bit_vectors/: bit_vector.rs  darray.rs  data.rs  prelude.rs  rank9sel.rs  sarray.rs
src/bit_vectors/bit_vector/: unary.rs
src/bit_vectors/darray/: builder.rs  inner.rs  mod.rs
src/bit_vectors/rank9sel/: builder.rs  inner.rs  mod.rs
src/bit_vectors/sarray/: builder.rs
src/char_sequences/: mod.rs  wavelet_matrix.rs
src/int_vectors/: compact_vector.rs  dacs_byte.rs  dacs_opt.rs  mod.rs  prefix_summed_elias_fano.rs  prelude.rs
src/mii_sequences/: elias_fano.rs  prelude.rs
tests/: gpu_parity.rs
