[package]
name = "jerky"
version = "0.8.1"
authors = ["Shunsuke Kanda (kampersanda) <shnsk.knd@gmail.com>",
           "Jan-Paul Bultmann (somethingelseentirely) <jp@bultmann.eu>"]
description = "Succinct on-disk data structures in Rust"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/jerky"
repository = "https://github.com/triblespace/jerky"
homepage = "https://github.com/triblespace/jerky"
keywords = ["succinct", "compression"]
categories = ["data-structures"]
edition = "2018"
rust-version = "1.61.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
num-traits = "0.2.15"
anybytes = { git = "https://github.com/triblespace/anybytes", features = ["zerocopy"] }
zerocopy = "0.8"

[features]
default = ["std"]

std = []
intrinsics = []

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex.html"]
